PharmaDemo/src/objects/Campaign_Products__c.object
<CustomObject>
    <fields>
        <fullName>Product_Message__c</fullName>
        <label>Product Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>PharmaProduct__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Campaign_Products</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <label>Promotion</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Products to be Promoted</relationshipLabel>
        <relationshipName>Campaign_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id , IMAGE(&quot;/img/icon/tasks16.gif&quot; ,&quot;View&quot;) ,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Campaign Product</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>Campaign Products No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>